// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`approved production classes and Builds > resolves hero.aerin at Lv1, Lv3, Lv5 from choices > hero.aerin Lv.1 1`] = `
{
  "partial": {
    "cha": false,
    "con": false,
    "dex": false,
    "int": false,
    "str": false,
    "wis": false,
  },
  "profile": {
    "kind": "character",
    "stats": {
      "attributes": {
        "cha": 0,
        "con": 1,
        "dex": 1,
        "int": 0,
        "str": 3,
        "wis": 2,
      },
      "defense": {
        "ancestryHp": 8,
        "armorProficiencies": {
          "heavy": "trained",
          "light": "trained",
          "medium": "trained",
          "unarmored": "trained",
        },
        "classHpPerLevel": 10,
      },
      "level": 1,
      "offense": {
        "classDcProficiency": "trained",
        "keyAttribute": "str",
        "unarmedStrike": {
          "attackMode": "melee",
          "category": "unarmed",
          "damage": {
            "count": 1,
            "damageType": "bludgeoning",
            "sides": 4,
          },
          "name": "Fist",
          "rangeFeet": 5,
          "traits": [
            {
              "id": "agile",
            },
            {
              "id": "finesse",
            },
          ],
        },
        "weaponProficiencies": {
          "advanced": "trained",
          "martial": "expert",
          "simple": "expert",
          "unarmed": "expert",
        },
      },
      "perception": "expert",
      "saves": {
        "fortitude": "expert",
        "reflex": "expert",
        "will": "trained",
      },
      "skills": {
        "acrobatics": "untrained",
        "arcana": "untrained",
        "athletics": "trained",
        "crafting": "untrained",
        "deception": "untrained",
        "diplomacy": "untrained",
        "intimidation": "trained",
        "medicine": "untrained",
        "nature": "untrained",
        "occultism": "untrained",
        "performance": "untrained",
        "religion": "untrained",
        "society": "untrained",
        "stealth": "untrained",
        "survival": "untrained",
        "thievery": "untrained",
      },
    },
  },
  "speedFeet": 25,
  "statistics": {
    "ac": 17,
    "athletics": 6,
    "classDc": 16,
    "initiative": 7,
    "maxHp": 19,
    "reflex": {
      "dc": 17,
      "modifier": 7,
    },
  },
  "strike": {
    "damage": 3,
    "modifier": 8,
    "rank": "expert",
  },
}
`;

exports[`approved production classes and Builds > resolves hero.aerin at Lv1, Lv3, Lv5 from choices > hero.aerin Lv.3 1`] = `
{
  "partial": {
    "cha": false,
    "con": false,
    "dex": false,
    "int": false,
    "str": false,
    "wis": false,
  },
  "profile": {
    "kind": "character",
    "stats": {
      "attributes": {
        "cha": 0,
        "con": 1,
        "dex": 1,
        "int": 0,
        "str": 3,
        "wis": 2,
      },
      "defense": {
        "ancestryHp": 8,
        "armorProficiencies": {
          "heavy": "trained",
          "light": "trained",
          "medium": "trained",
          "unarmored": "trained",
        },
        "classHpPerLevel": 10,
      },
      "level": 3,
      "offense": {
        "classDcProficiency": "trained",
        "keyAttribute": "str",
        "unarmedStrike": {
          "attackMode": "melee",
          "category": "unarmed",
          "damage": {
            "count": 1,
            "damageType": "bludgeoning",
            "sides": 4,
          },
          "name": "Fist",
          "rangeFeet": 5,
          "traits": [
            {
              "id": "agile",
            },
            {
              "id": "finesse",
            },
          ],
        },
        "weaponProficiencies": {
          "advanced": "trained",
          "martial": "expert",
          "simple": "expert",
          "unarmed": "expert",
        },
      },
      "perception": "expert",
      "saves": {
        "fortitude": "expert",
        "reflex": "expert",
        "will": "expert",
      },
      "skills": {
        "acrobatics": "untrained",
        "arcana": "untrained",
        "athletics": "expert",
        "crafting": "untrained",
        "deception": "untrained",
        "diplomacy": "untrained",
        "intimidation": "trained",
        "medicine": "untrained",
        "nature": "untrained",
        "occultism": "untrained",
        "performance": "untrained",
        "religion": "untrained",
        "society": "untrained",
        "stealth": "untrained",
        "survival": "untrained",
        "thievery": "untrained",
      },
    },
  },
  "speedFeet": 25,
  "statistics": {
    "ac": 19,
    "athletics": 10,
    "classDc": 18,
    "initiative": 9,
    "maxHp": 41,
    "reflex": {
      "dc": 19,
      "modifier": 9,
    },
  },
  "strike": {
    "damage": 3,
    "modifier": 10,
    "rank": "expert",
  },
}
`;

exports[`approved production classes and Builds > resolves hero.aerin at Lv1, Lv3, Lv5 from choices > hero.aerin Lv.5 1`] = `
{
  "partial": {
    "cha": false,
    "con": false,
    "dex": false,
    "int": false,
    "str": false,
    "wis": false,
  },
  "profile": {
    "kind": "character",
    "stats": {
      "attributes": {
        "cha": 0,
        "con": 2,
        "dex": 2,
        "int": 0,
        "str": 4,
        "wis": 3,
      },
      "defense": {
        "ancestryHp": 8,
        "armorProficiencies": {
          "heavy": "trained",
          "light": "trained",
          "medium": "trained",
          "unarmored": "trained",
        },
        "classHpPerLevel": 10,
      },
      "level": 5,
      "offense": {
        "classDcProficiency": "trained",
        "keyAttribute": "str",
        "unarmedStrike": {
          "attackMode": "melee",
          "category": "unarmed",
          "damage": {
            "count": 1,
            "damageType": "bludgeoning",
            "sides": 4,
          },
          "name": "Fist",
          "rangeFeet": 5,
          "traits": [
            {
              "id": "agile",
            },
            {
              "id": "finesse",
            },
          ],
        },
        "weaponProficiencies": {
          "advanced": "trained",
          "martial": "expert",
          "simple": "expert",
          "unarmed": "master",
        },
      },
      "perception": "expert",
      "saves": {
        "fortitude": "expert",
        "reflex": "expert",
        "will": "expert",
      },
      "skills": {
        "acrobatics": "untrained",
        "arcana": "untrained",
        "athletics": "expert",
        "crafting": "untrained",
        "deception": "untrained",
        "diplomacy": "untrained",
        "intimidation": "trained",
        "medicine": "untrained",
        "nature": "trained",
        "occultism": "untrained",
        "performance": "untrained",
        "religion": "untrained",
        "society": "untrained",
        "stealth": "untrained",
        "survival": "untrained",
        "thievery": "untrained",
      },
    },
  },
  "speedFeet": 25,
  "statistics": {
    "ac": 22,
    "athletics": 13,
    "classDc": 21,
    "initiative": 12,
    "maxHp": 68,
    "reflex": {
      "dc": 22,
      "modifier": 12,
    },
  },
  "strike": {
    "damage": 4,
    "modifier": 13,
    "rank": "expert",
  },
}
`;

exports[`approved production classes and Builds > resolves hero.brom at Lv1, Lv3, Lv5 from choices > hero.brom Lv.1 1`] = `
{
  "partial": {
    "cha": false,
    "con": false,
    "dex": false,
    "int": false,
    "str": false,
    "wis": false,
  },
  "profile": {
    "kind": "character",
    "stats": {
      "attributes": {
        "cha": 1,
        "con": 2,
        "dex": 0,
        "int": 0,
        "str": 2,
        "wis": 2,
      },
      "defense": {
        "ancestryHp": 10,
        "armorProficiencies": {
          "heavy": "trained",
          "light": "trained",
          "medium": "trained",
          "unarmored": "trained",
        },
        "classHpPerLevel": 10,
      },
      "level": 1,
      "offense": {
        "classDcProficiency": "trained",
        "keyAttribute": "str",
        "unarmedStrike": {
          "attackMode": "melee",
          "category": "unarmed",
          "damage": {
            "count": 1,
            "damageType": "bludgeoning",
            "sides": 4,
          },
          "name": "Fist",
          "rangeFeet": 5,
          "traits": [
            {
              "id": "agile",
            },
            {
              "id": "finesse",
            },
          ],
        },
        "weaponProficiencies": {
          "advanced": "untrained",
          "martial": "trained",
          "simple": "trained",
          "unarmed": "trained",
        },
      },
      "perception": "trained",
      "saves": {
        "fortitude": "expert",
        "reflex": "trained",
        "will": "expert",
      },
      "skills": {
        "acrobatics": "untrained",
        "arcana": "untrained",
        "athletics": "trained",
        "crafting": "untrained",
        "deception": "untrained",
        "diplomacy": "untrained",
        "intimidation": "trained",
        "medicine": "untrained",
        "nature": "untrained",
        "occultism": "untrained",
        "performance": "untrained",
        "religion": "untrained",
        "society": "untrained",
        "stealth": "untrained",
        "survival": "untrained",
        "thievery": "untrained",
      },
    },
  },
  "speedFeet": 20,
  "statistics": {
    "ac": 18,
    "athletics": 5,
    "classDc": 15,
    "initiative": 5,
    "maxHp": 22,
    "reflex": {
      "dc": 13,
      "modifier": 3,
    },
  },
  "strike": {
    "damage": 2,
    "modifier": 5,
    "rank": "trained",
  },
}
`;

exports[`approved production classes and Builds > resolves hero.brom at Lv1, Lv3, Lv5 from choices > hero.brom Lv.3 1`] = `
{
  "partial": {
    "cha": false,
    "con": false,
    "dex": false,
    "int": false,
    "str": false,
    "wis": false,
  },
  "profile": {
    "kind": "character",
    "stats": {
      "attributes": {
        "cha": 1,
        "con": 2,
        "dex": 0,
        "int": 0,
        "str": 2,
        "wis": 2,
      },
      "defense": {
        "ancestryHp": 10,
        "armorProficiencies": {
          "heavy": "trained",
          "light": "trained",
          "medium": "trained",
          "unarmored": "trained",
        },
        "classHpPerLevel": 10,
      },
      "level": 3,
      "offense": {
        "classDcProficiency": "trained",
        "keyAttribute": "str",
        "unarmedStrike": {
          "attackMode": "melee",
          "category": "unarmed",
          "damage": {
            "count": 1,
            "damageType": "bludgeoning",
            "sides": 4,
          },
          "name": "Fist",
          "rangeFeet": 5,
          "traits": [
            {
              "id": "agile",
            },
            {
              "id": "finesse",
            },
          ],
        },
        "weaponProficiencies": {
          "advanced": "untrained",
          "martial": "trained",
          "simple": "trained",
          "unarmed": "trained",
        },
      },
      "perception": "trained",
      "saves": {
        "fortitude": "expert",
        "reflex": "trained",
        "will": "expert",
      },
      "skills": {
        "acrobatics": "untrained",
        "arcana": "untrained",
        "athletics": "expert",
        "crafting": "untrained",
        "deception": "untrained",
        "diplomacy": "untrained",
        "intimidation": "trained",
        "medicine": "untrained",
        "nature": "untrained",
        "occultism": "untrained",
        "performance": "untrained",
        "religion": "untrained",
        "society": "untrained",
        "stealth": "untrained",
        "survival": "untrained",
        "thievery": "untrained",
      },
    },
  },
  "speedFeet": 20,
  "statistics": {
    "ac": 20,
    "athletics": 9,
    "classDc": 17,
    "initiative": 7,
    "maxHp": 46,
    "reflex": {
      "dc": 15,
      "modifier": 5,
    },
  },
  "strike": {
    "damage": 2,
    "modifier": 7,
    "rank": "trained",
  },
}
`;

exports[`approved production classes and Builds > resolves hero.brom at Lv1, Lv3, Lv5 from choices > hero.brom Lv.5 1`] = `
{
  "partial": {
    "cha": false,
    "con": false,
    "dex": false,
    "int": false,
    "str": false,
    "wis": false,
  },
  "profile": {
    "kind": "character",
    "stats": {
      "attributes": {
        "cha": 1,
        "con": 3,
        "dex": 1,
        "int": 0,
        "str": 3,
        "wis": 3,
      },
      "defense": {
        "ancestryHp": 10,
        "armorProficiencies": {
          "heavy": "trained",
          "light": "trained",
          "medium": "trained",
          "unarmored": "trained",
        },
        "classHpPerLevel": 10,
      },
      "level": 5,
      "offense": {
        "classDcProficiency": "trained",
        "keyAttribute": "str",
        "unarmedStrike": {
          "attackMode": "melee",
          "category": "unarmed",
          "damage": {
            "count": 1,
            "damageType": "bludgeoning",
            "sides": 4,
          },
          "name": "Fist",
          "rangeFeet": 5,
          "traits": [
            {
              "id": "agile",
            },
            {
              "id": "finesse",
            },
          ],
        },
        "weaponProficiencies": {
          "advanced": "untrained",
          "martial": "expert",
          "simple": "expert",
          "unarmed": "expert",
        },
      },
      "perception": "trained",
      "saves": {
        "fortitude": "expert",
        "reflex": "trained",
        "will": "expert",
      },
      "skills": {
        "acrobatics": "untrained",
        "arcana": "untrained",
        "athletics": "expert",
        "crafting": "untrained",
        "deception": "untrained",
        "diplomacy": "untrained",
        "intimidation": "trained",
        "medicine": "untrained",
        "nature": "trained",
        "occultism": "untrained",
        "performance": "untrained",
        "religion": "untrained",
        "society": "untrained",
        "stealth": "untrained",
        "survival": "untrained",
        "thievery": "untrained",
      },
    },
  },
  "speedFeet": 20,
  "statistics": {
    "ac": 23,
    "athletics": 12,
    "classDc": 20,
    "initiative": 10,
    "maxHp": 75,
    "reflex": {
      "dc": 18,
      "modifier": 8,
    },
  },
  "strike": {
    "damage": 3,
    "modifier": 12,
    "rank": "expert",
  },
}
`;

exports[`approved production classes and Builds > resolves hero.lyra at Lv1, Lv3, Lv5 from choices > hero.lyra Lv.1 1`] = `
{
  "partial": {
    "cha": false,
    "con": false,
    "dex": false,
    "int": false,
    "str": false,
    "wis": false,
  },
  "profile": {
    "kind": "character",
    "stats": {
      "attributes": {
        "cha": 0,
        "con": 1,
        "dex": 3,
        "int": 2,
        "str": 0,
        "wis": 1,
      },
      "defense": {
        "ancestryHp": 6,
        "armorProficiencies": {
          "heavy": "untrained",
          "light": "trained",
          "medium": "untrained",
          "unarmored": "trained",
        },
        "classHpPerLevel": 8,
      },
      "level": 1,
      "offense": {
        "classDcProficiency": "trained",
        "keyAttribute": "dex",
        "unarmedStrike": {
          "attackMode": "melee",
          "category": "unarmed",
          "damage": {
            "count": 1,
            "damageType": "bludgeoning",
            "sides": 4,
          },
          "name": "Fist",
          "rangeFeet": 5,
          "traits": [
            {
              "id": "agile",
            },
            {
              "id": "finesse",
            },
          ],
        },
        "weaponProficiencies": {
          "advanced": "untrained",
          "martial": "trained",
          "simple": "trained",
          "unarmed": "trained",
        },
      },
      "perception": "expert",
      "saves": {
        "fortitude": "trained",
        "reflex": "expert",
        "will": "expert",
      },
      "skills": {
        "acrobatics": "trained",
        "arcana": "untrained",
        "athletics": "trained",
        "crafting": "untrained",
        "deception": "untrained",
        "diplomacy": "untrained",
        "intimidation": "untrained",
        "medicine": "untrained",
        "nature": "untrained",
        "occultism": "untrained",
        "performance": "untrained",
        "religion": "untrained",
        "society": "untrained",
        "stealth": "trained",
        "survival": "untrained",
        "thievery": "trained",
      },
    },
  },
  "speedFeet": 30,
  "statistics": {
    "ac": 17,
    "athletics": 3,
    "classDc": 16,
    "initiative": 6,
    "maxHp": 15,
    "reflex": {
      "dc": 19,
      "modifier": 9,
    },
  },
  "strike": {
    "damage": 0,
    "modifier": 6,
    "rank": "trained",
  },
}
`;

exports[`approved production classes and Builds > resolves hero.lyra at Lv1, Lv3, Lv5 from choices > hero.lyra Lv.3 1`] = `
{
  "partial": {
    "cha": false,
    "con": false,
    "dex": false,
    "int": false,
    "str": false,
    "wis": false,
  },
  "profile": {
    "kind": "character",
    "stats": {
      "attributes": {
        "cha": 0,
        "con": 1,
        "dex": 3,
        "int": 2,
        "str": 0,
        "wis": 1,
      },
      "defense": {
        "ancestryHp": 6,
        "armorProficiencies": {
          "heavy": "untrained",
          "light": "trained",
          "medium": "untrained",
          "unarmored": "trained",
        },
        "classHpPerLevel": 8,
      },
      "level": 3,
      "offense": {
        "classDcProficiency": "trained",
        "keyAttribute": "dex",
        "unarmedStrike": {
          "attackMode": "melee",
          "category": "unarmed",
          "damage": {
            "count": 1,
            "damageType": "bludgeoning",
            "sides": 4,
          },
          "name": "Fist",
          "rangeFeet": 5,
          "traits": [
            {
              "id": "agile",
            },
            {
              "id": "finesse",
            },
          ],
        },
        "weaponProficiencies": {
          "advanced": "untrained",
          "martial": "trained",
          "simple": "trained",
          "unarmed": "trained",
        },
      },
      "perception": "expert",
      "saves": {
        "fortitude": "trained",
        "reflex": "expert",
        "will": "expert",
      },
      "skills": {
        "acrobatics": "expert",
        "arcana": "untrained",
        "athletics": "trained",
        "crafting": "untrained",
        "deception": "untrained",
        "diplomacy": "untrained",
        "intimidation": "untrained",
        "medicine": "untrained",
        "nature": "untrained",
        "occultism": "untrained",
        "performance": "untrained",
        "religion": "untrained",
        "society": "untrained",
        "stealth": "trained",
        "survival": "untrained",
        "thievery": "trained",
      },
    },
  },
  "speedFeet": 30,
  "statistics": {
    "ac": 19,
    "athletics": 5,
    "classDc": 18,
    "initiative": 8,
    "maxHp": 33,
    "reflex": {
      "dc": 21,
      "modifier": 11,
    },
  },
  "strike": {
    "damage": 0,
    "modifier": 8,
    "rank": "trained",
  },
}
`;

exports[`approved production classes and Builds > resolves hero.lyra at Lv1, Lv3, Lv5 from choices > hero.lyra Lv.5 1`] = `
{
  "partial": {
    "cha": false,
    "con": false,
    "dex": false,
    "int": false,
    "str": false,
    "wis": false,
  },
  "profile": {
    "kind": "character",
    "stats": {
      "attributes": {
        "cha": 0,
        "con": 2,
        "dex": 4,
        "int": 2,
        "str": 1,
        "wis": 2,
      },
      "defense": {
        "ancestryHp": 6,
        "armorProficiencies": {
          "heavy": "untrained",
          "light": "trained",
          "medium": "untrained",
          "unarmored": "trained",
        },
        "classHpPerLevel": 8,
      },
      "level": 5,
      "offense": {
        "classDcProficiency": "trained",
        "keyAttribute": "dex",
        "unarmedStrike": {
          "attackMode": "melee",
          "category": "unarmed",
          "damage": {
            "count": 1,
            "damageType": "bludgeoning",
            "sides": 4,
          },
          "name": "Fist",
          "rangeFeet": 5,
          "traits": [
            {
              "id": "agile",
            },
            {
              "id": "finesse",
            },
          ],
        },
        "weaponProficiencies": {
          "advanced": "untrained",
          "martial": "expert",
          "simple": "expert",
          "unarmed": "expert",
        },
      },
      "perception": "expert",
      "saves": {
        "fortitude": "trained",
        "reflex": "expert",
        "will": "expert",
      },
      "skills": {
        "acrobatics": "expert",
        "arcana": "untrained",
        "athletics": "trained",
        "crafting": "untrained",
        "deception": "untrained",
        "diplomacy": "untrained",
        "intimidation": "untrained",
        "medicine": "untrained",
        "nature": "trained",
        "occultism": "untrained",
        "performance": "untrained",
        "religion": "untrained",
        "society": "untrained",
        "stealth": "trained",
        "survival": "untrained",
        "thievery": "trained",
      },
    },
  },
  "speedFeet": 30,
  "statistics": {
    "ac": 22,
    "athletics": 8,
    "classDc": 21,
    "initiative": 11,
    "maxHp": 56,
    "reflex": {
      "dc": 24,
      "modifier": 14,
    },
  },
  "strike": {
    "damage": 1,
    "modifier": 13,
    "rank": "expert",
  },
}
`;

exports[`approved production classes and Builds > resolves hero.nera at Lv1, Lv3, Lv5 from choices > hero.nera Lv.1 1`] = `
{
  "partial": {
    "cha": false,
    "con": false,
    "dex": false,
    "int": false,
    "str": false,
    "wis": false,
  },
  "profile": {
    "kind": "character",
    "stats": {
      "attributes": {
        "cha": 0,
        "con": 1,
        "dex": 1,
        "int": 1,
        "str": 1,
        "wis": 3,
      },
      "defense": {
        "ancestryHp": 8,
        "armorProficiencies": {
          "heavy": "untrained",
          "light": "trained",
          "medium": "trained",
          "unarmored": "trained",
        },
        "classHpPerLevel": 8,
      },
      "level": 1,
      "offense": {
        "classDcProficiency": "trained",
        "keyAttribute": "wis",
        "unarmedStrike": {
          "attackMode": "melee",
          "category": "unarmed",
          "damage": {
            "count": 1,
            "damageType": "bludgeoning",
            "sides": 4,
          },
          "name": "Fist",
          "rangeFeet": 5,
          "traits": [
            {
              "id": "agile",
            },
            {
              "id": "finesse",
            },
          ],
        },
        "weaponProficiencies": {
          "advanced": "untrained",
          "martial": "untrained",
          "simple": "trained",
          "unarmed": "trained",
        },
      },
      "perception": "trained",
      "saves": {
        "fortitude": "expert",
        "reflex": "trained",
        "will": "expert",
      },
      "skills": {
        "acrobatics": "untrained",
        "arcana": "untrained",
        "athletics": "untrained",
        "crafting": "untrained",
        "deception": "untrained",
        "diplomacy": "trained",
        "intimidation": "untrained",
        "medicine": "trained",
        "nature": "untrained",
        "occultism": "untrained",
        "performance": "untrained",
        "religion": "trained",
        "society": "untrained",
        "stealth": "untrained",
        "survival": "untrained",
        "thievery": "untrained",
      },
    },
  },
  "speedFeet": 25,
  "statistics": {
    "ac": 15,
    "athletics": 1,
    "classDc": 16,
    "initiative": 6,
    "maxHp": 17,
    "reflex": {
      "dc": 14,
      "modifier": 4,
    },
  },
  "strike": {
    "damage": 0,
    "modifier": 1,
    "rank": "untrained",
  },
}
`;

exports[`approved production classes and Builds > resolves hero.nera at Lv1, Lv3, Lv5 from choices > hero.nera Lv.3 1`] = `
{
  "partial": {
    "cha": false,
    "con": false,
    "dex": false,
    "int": false,
    "str": false,
    "wis": false,
  },
  "profile": {
    "kind": "character",
    "stats": {
      "attributes": {
        "cha": 0,
        "con": 1,
        "dex": 1,
        "int": 1,
        "str": 1,
        "wis": 3,
      },
      "defense": {
        "ancestryHp": 8,
        "armorProficiencies": {
          "heavy": "untrained",
          "light": "trained",
          "medium": "trained",
          "unarmored": "trained",
        },
        "classHpPerLevel": 8,
      },
      "level": 3,
      "offense": {
        "classDcProficiency": "trained",
        "keyAttribute": "wis",
        "unarmedStrike": {
          "attackMode": "melee",
          "category": "unarmed",
          "damage": {
            "count": 1,
            "damageType": "bludgeoning",
            "sides": 4,
          },
          "name": "Fist",
          "rangeFeet": 5,
          "traits": [
            {
              "id": "agile",
            },
            {
              "id": "finesse",
            },
          ],
        },
        "weaponProficiencies": {
          "advanced": "untrained",
          "martial": "trained",
          "simple": "trained",
          "unarmed": "trained",
        },
      },
      "perception": "trained",
      "saves": {
        "fortitude": "expert",
        "reflex": "trained",
        "will": "expert",
      },
      "skills": {
        "acrobatics": "untrained",
        "arcana": "untrained",
        "athletics": "untrained",
        "crafting": "untrained",
        "deception": "untrained",
        "diplomacy": "trained",
        "intimidation": "untrained",
        "medicine": "expert",
        "nature": "untrained",
        "occultism": "untrained",
        "performance": "untrained",
        "religion": "trained",
        "society": "untrained",
        "stealth": "untrained",
        "survival": "untrained",
        "thievery": "untrained",
      },
    },
  },
  "speedFeet": 25,
  "statistics": {
    "ac": 17,
    "athletics": 1,
    "classDc": 18,
    "initiative": 8,
    "maxHp": 35,
    "reflex": {
      "dc": 16,
      "modifier": 6,
    },
  },
  "strike": {
    "damage": 0,
    "modifier": 6,
    "rank": "trained",
  },
}
`;

exports[`approved production classes and Builds > resolves hero.nera at Lv1, Lv3, Lv5 from choices > hero.nera Lv.5 1`] = `
{
  "partial": {
    "cha": false,
    "con": false,
    "dex": false,
    "int": false,
    "str": false,
    "wis": false,
  },
  "profile": {
    "kind": "character",
    "stats": {
      "attributes": {
        "cha": 0,
        "con": 2,
        "dex": 2,
        "int": 1,
        "str": 2,
        "wis": 4,
      },
      "defense": {
        "ancestryHp": 8,
        "armorProficiencies": {
          "heavy": "untrained",
          "light": "trained",
          "medium": "trained",
          "unarmored": "trained",
        },
        "classHpPerLevel": 8,
      },
      "level": 5,
      "offense": {
        "classDcProficiency": "trained",
        "keyAttribute": "wis",
        "unarmedStrike": {
          "attackMode": "melee",
          "category": "unarmed",
          "damage": {
            "count": 1,
            "damageType": "bludgeoning",
            "sides": 4,
          },
          "name": "Fist",
          "rangeFeet": 5,
          "traits": [
            {
              "id": "agile",
            },
            {
              "id": "finesse",
            },
          ],
        },
        "weaponProficiencies": {
          "advanced": "untrained",
          "martial": "trained",
          "simple": "trained",
          "unarmed": "trained",
        },
      },
      "perception": "expert",
      "saves": {
        "fortitude": "expert",
        "reflex": "trained",
        "will": "expert",
      },
      "skills": {
        "acrobatics": "untrained",
        "arcana": "untrained",
        "athletics": "untrained",
        "crafting": "untrained",
        "deception": "untrained",
        "diplomacy": "trained",
        "intimidation": "untrained",
        "medicine": "expert",
        "nature": "trained",
        "occultism": "untrained",
        "performance": "untrained",
        "religion": "trained",
        "society": "untrained",
        "stealth": "untrained",
        "survival": "untrained",
        "thievery": "untrained",
      },
    },
  },
  "speedFeet": 25,
  "statistics": {
    "ac": 20,
    "athletics": 2,
    "classDc": 21,
    "initiative": 13,
    "maxHp": 58,
    "reflex": {
      "dc": 19,
      "modifier": 9,
    },
  },
  "strike": {
    "damage": 1,
    "modifier": 9,
    "rank": "trained",
  },
}
`;
